2011-08-24  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: split ConsoleView into the View and the Model.
        https://bugs.webkit.org/show_bug.cgi?id=66861

        Reviewed by Yury Semikhatsky.

        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * inspector/compile-front-end.sh:
        * inspector/front-end/BreakpointManager.js:
        * inspector/front-end/ConsoleMessage.js:
        (WebInspector.ConsoleMessage.prototype._format):
        * inspector/front-end/ConsoleModel.js: Added.
        (WebInspector.ConsoleModel):
        (WebInspector.ConsoleModel.prototype._setConsoleMessageExpiredCount):
        (WebInspector.ConsoleModel.prototype.addMessage):
        (WebInspector.ConsoleModel.prototype._incrementErrorWarningCount):
        (WebInspector.ConsoleModel.prototype.requestClearMessages):
        (WebInspector.ConsoleModel.prototype.clearMessages):
        (WebInspector.ConsoleDispatcher):
        (WebInspector.ConsoleDispatcher.prototype.messageAdded):
        (WebInspector.ConsoleDispatcher.prototype.messageRepeatCountUpdated):
        * inspector/front-end/ConsolePanel.js:
        (WebInspector.ConsolePanel):
        (WebInspector.ConsolePanel.prototype.performSearch):
        * inspector/front-end/ConsoleView.js:
        (WebInspector.ConsoleView):
        (WebInspector.ConsoleView.prototype._consoleMessageAdded):
        (WebInspector.ConsoleView.prototype._appendConsoleCommand):
        (WebInspector.ConsoleView.prototype._appendConsoleCommandResult):
        (WebInspector.ConsoleView.prototype._appendConsoleMessage):
        (WebInspector.ConsoleView.prototype._consoleCleared):
        (WebInspector.ConsoleView.prototype._registerShortcuts):
        (WebInspector.ConsoleView.prototype._requestClearMessages):
        * inspector/front-end/DebuggerModel.js:
        * inspector/front-end/DebuggerPresentationModel.js:
        (WebInspector.DebuggerPresentationModel):